[gd_scene load_steps=10 format=3 uid="uid://b3g6xpu7pchk7"]

[ext_resource type="Texture2D" uid="uid://bc3yiesalklmd" path="res://Background.png" id="1_iynnj"]
[ext_resource type="Script" uid="uid://coo7mpsvcjqha" path="res://ModeSelection.gd" id="1_yrymw"]
[ext_resource type="Texture2D" uid="uid://k0dctlkvytgf" path="res://capybalancelogo.png" id="2_l782h"]
[ext_resource type="Texture2D" uid="uid://brldpkw2rdwkh" path="res://height challenge button.png" id="3_yrymw"]
[ext_resource type="Texture2D" uid="uid://lit1l4qsorqj" path="res://endless stack button.png" id="4_3e2kj"]
[ext_resource type="Texture2D" uid="uid://cmlftdl7w58pn" path="res://back button.png" id="6_l782h"]
[ext_resource type="FontFile" uid="uid://dv6rxjsqf5lyn" path="res://PressStart2P.ttf" id="8_3e2kj"]
[ext_resource type="AudioStream" uid="uid://4a16lvyoxji8" path="res://Audio Asset/starting menu screen.mp3" id="9_uc2ct"]
[ext_resource type="AudioStream" uid="uid://cgkgtfkcmhgv2" path="res://Audio Asset/click button.mp3" id="10_a3mbt"]

[node name="ModeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yrymw")

[node name="GameModeText" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GameModeText"]
layout_mode = 0
offset_left = 71.0
offset_top = 618.0
offset_right = 1061.0
offset_bottom = 767.0
scale = Vector2(0.587, 0.586)
theme_override_colors/font_color = Color(1, 0.788235, 0.0823529, 1)
theme_override_colors/font_shadow_color = Color(0.568973, 0.568973, 0.568973, 1)
theme_override_fonts/font = ExtResource("8_3e2kj")
theme_override_font_sizes/font_size = 90
text = "SELECT MODE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -40.0
offset_right = 371.0
offset_bottom = 566.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.739095, 0.751704)
texture = ExtResource("1_iynnj")
expand_mode = 3

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 155.0
offset_right = 1932.0
offset_bottom = 1356.0
scale = Vector2(0.355578, 0.334725)
texture = ExtResource("2_l782h")
expand_mode = 2
stretch_mode = 4

[node name="HeightChallengeButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 724.0
offset_right = 1731.0
offset_bottom = 2344.0
scale = Vector2(0.309, 0.286)
theme_override_constants/separation = 30

[node name="HeightChallengeButton" type="TextureButton" parent="HeightChallengeButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_yrymw")

[node name="EndlessStackButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 876.0
offset_right = 1732.0
offset_bottom = 1626.0
scale = Vector2(0.309, 0.286)

[node name="EndlessStackButton" type="TextureButton" parent="EndlessStackButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_3e2kj")

[node name="BackButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 78.0
offset_right = 1627.0
offset_bottom = 828.0
scale = Vector2(0.123, 0.114)

[node name="BackButton" type="TextureButton" parent="BackButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("6_l782h")

[node name="LandingPageMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_uc2ct")
parameters/looping = true

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_a3mbt")
